fixed spacing on link for photo credit and link direction for gaia

--- a/styles/style.css
+++ b/styles/style.css
@@ -40,7 +40,7 @@ main {
     margin-top: 0;
 }
 
-main * {
+main>* {
     margin: 20px;
 }
 
